fix: render trainer upgrades within dialog

--- a/dustland.css
+++ b/dustland.css
@@ -492,8 +492,7 @@ input[type="range"] {
         body.mobile-on #start,
         body.mobile-on #creator,
         body.mobile-on #moduleLoader,
-        body.mobile-on #shopOverlay,
-        body.mobile-on #trainerOverlay {
+        body.mobile-on #shopOverlay {
             bottom: var(--ctrlH);
             height: calc(100% - var(--ctrlH));
         }
