--- a/dustland.css
+++ b/dustland.css
@@ -647,6 +647,11 @@ input[type="range"] {
         font-family: inherit;
     }
 
+    .btn.cloud-action-disabled {
+        cursor: not-allowed;
+        opacity: 0.6;
+    }
+
     .problem-link {
         width: 100%;
         padding: 6px 8px;
